IMG tags are top aligned now. fixes issue in ie?

--- a/css/bootstrap-overrides.sass
+++ b/css/bootstrap-overrides.sass
@@ -63,3 +63,6 @@ h1
 
 p
   margin-bottom: 40px
+
+img
+  vertical-align: top
